Updated opendap library

--- a/src/opendap/olfs/package.html
+++ b/src/opendap/olfs/package.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-    <TITLE>OPeNDAP Server-4</TITLE>
+    <TITLE>OLFS</TITLE>
 </HEAD>
 
 <BODY>
@@ -14,3 +14,4 @@ for decoding a client request and then making the appropriate
 response.
 </BODY>
 </HTML>
+
