--- a/install.html
+++ b/install.html
@@ -1,6 +1,6 @@
 <title>Server4 Installation</title>
 
-<h1 align="center"><img src="doc/images/opendap_logo_masthead.gif" width="206" height="93" align="absmiddle"></h1>
+<h1 align="center"><img src="doc/images/logo.gif" width="206" height="93" align="absmiddle"></h1>
 <h1 align="center">Server4 Installation</h1>
 <p align="center">Ver 1.0.0 </p>
 <hr>
