install.html, README: Updated with (more) correct information.

--- a/install.html
+++ b/install.html
@@ -13,7 +13,7 @@
 </blockquote>
 <h2><strong>Check it out:</strong>     </h2>
 <blockquote>
-  <p>	svn co http://scm.opendap.org:8090/svn/trunk/Server4<br>
+  <p>	svn co http://scm.opendap.org:8090/svn/trunk/olfs<br>
   </p>
 </blockquote>
 <h2><strong>Build it:</strong>         </h2>
